--- a/kafka-demo-3/web/index.html
+++ b/kafka-demo-3/web/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Chat</title>
+        <title>Lens</title>
     </head>
     <body>
-        <h1>WebSocket Chat</h1>
+        <h1>Lens Chat</h1>
         <form action="" onsubmit="sendMessage(event)">
             <input type="text" id="messageText" autocomplete="off"/>
             <button>Send</button>
